--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-IDRAC_HOST="idrac IP or hostname"
+IDRAC_HOST="local"
 IDRAC_USERNAME="root"
 IDRAC_PASSWORD="calvin"
 FAN_SPEED=25                      # Set fan speed as a percentage
